fix margin on mobile nav

--- a/sass/module/_menu.scss
+++ b/sass/module/_menu.scss
@@ -15,7 +15,7 @@
 
 .menu-toggle {
   cursor: pointer;
-  margin: 1.618em auto;
+  margin: 0 auto 1.618em auto;
   display: block;
   width: 100%;
   text-align: left;
