--- a/style.css
+++ b/style.css
@@ -1034,7 +1034,7 @@ fieldset {
 
 .menu-toggle {
   cursor: pointer;
-  margin: 1.618em auto;
+  margin: 0 auto 1.618em auto;
   display: block;
   width: 100%;
   text-align: left; }
